--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,11 @@
 {
-    "type": "postgres",
-    "host": "localhost",
-    "port": 5432,
-    "username": "your_username",
-    "password": "your_password",
-    "database": "test",
+    "name": "default",
+    "type": "mysql",
+    "host": "vittoria.madagascar.webcup.hodi.host",
+    "port": 3306,
+    "username": "vittoria",
+    "password": "24Vittoria!",
+    "database": "vittoria_webcup",
     "synchronize": true,
     "logging": false,
     "entities": ["src/**/*.entity.ts"],
