--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "dev": "nodemon certificate/index.js"
   },
   "dependencies": {
     "@nestjs-library/crud": "^0.12.0",
@@ -36,11 +37,14 @@
     "mysql": "^2.18.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.15.0",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "replicate": "^0.29.1",
     "rxjs": "^7.8.1",
-    "socket.io": "^3.0.2"
+    "socket.io": "^3.0.2",
+    "typeorm": "^0.3.20",
+    "webpack": "^5.91.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -59,6 +63,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "nodemon": "^3.1.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
